# edgpp-genomic

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements_5090.txt  requirements_t4.txt
.planning/: workflow-memory.json
C_context/: biorxiv_preprint_checklist.md  degu_end_to_end_port_plan.md  handoff_user_actions.md
T_tools/: asl_audit.py  bootstrap_cp_baselines.py  bootstrap_h2h_baselines.py  cp_baselines_h2h.py  hccp_on_logreg.py  lf_and_bootstrap_figs.py  nested_kcv_helpers.py  open_targets_h2h_design.md  open_targets_subsample.py  paired_bootstrap_h2h.py  paper_finder_shim.py  paper_style.py  preview_fig1_variants.py  preview_fig9_variants.py  preview_figD_variants.py  preview_lf_forest_colors.py  preview_polish_variants.py  proteingym_lf_per_assay.py  proteingym_predict_verify.py  replot_n_sweep.py  synthetic_n_sweep.py  trait_cluster_aggregate.py
baselines/: README.md
configs/: gpu5090_full.yaml  gpu5090_smoke.yaml  t4_ablation.yaml  t4_ablation_noMagSide.yaml  t4_debug.yaml  t4_long_baseline.yaml  t4_real.yaml
papers/: degu_reproduction_plan.md  literature_v0.md
reports/: clinvar_holdout_investigation.md  day10_ablation_paper_outline.md  day14_external_validation.md  path_a_plan.md  phase2_day11_hetero_conformal.md  t4_phase0.md
scripts/: 02_prepare_debug_snp.py  03_smoke.py  03b_smoke_real.py  06_train.py  07_evaluate.py  08_zero_shot_eval.py  09_aggregator_chrom_loo.py  10_selective_head.py  11_aggregator_gbm.py  12_conformal.py  13_hetero_head.py  14_conformal_hetero.py  15_eval_local_coverage.py  16_degu_lite.py  17_trait_loo.py  (+34 more)
(+146 files in other folders)
